[package]
name = "minhash_dedupe"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.121"
sha2 = "0.10.8"
utils = { path = "../utils" }
rand = "0.8.5"
rustc-hash = "2.0.0"
serde = "1.0.204"
indicatif = "0.17.8"
tiktoken-rs = "=0.2.2"
tokio = { version = "1.39.2", features = ["full"] }
rayon = "1.10.0"
parking_lot = "0.12.3"
